<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top|center"
    tools:context=".MainActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/mePic"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_margin="25dp"
        app:shapeAppearanceOverlay="@style/CornerCut"
        app:srcCompat="@drawable/logo_online_shopping_app" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif-condensed"
        android:padding="10dp"
        android:text="@string/welcome_mainPage"
        android:textSize="30sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:padding="10dp">
        <Button
            android:id="@+id/login_button"
            android:text="@string/main_act_login"
            android:layout_margin="15dp"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/signUp_button"
            android:text="@string/sign_up_act_Main"
            android:layout_margin="15dp"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/exit_button"
            android:text="@string/exit_act_main"
            android:layout_margin="15dp"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:padding="18dp"
        android:text="@string/forgot_password">

    </TextView>



    <TextView
        android:id="@+id/copy_rights"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:padding="8dp"
        android:text="@string/copyRight_act_main">

    </TextView>

    <TextView
        android:id="@+id/androidStudio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginEnd="10dp"
        android:padding="8dp"
        android:text="@string/android_studio_main">

    </TextView>


</LinearLayout>